<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewName"
        style="@style/my_style"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        app:fontFamily="@font/roboto_black_italic" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/my_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/what_is_your_nickname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/Done" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/my_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:contentDescription="@string/pfpfPic"
        app:srcCompat="@drawable/hitler" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDesc"
                style="@style/my_style"
                app:fontFamily="@font/roboto_black_italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_desc"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>